# scanfish

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
scanfish/: CMakeLists.txt  pyinstaller.cpp  pyinstaller.h  scanfish.cpp  scanfish.h
